--- a/algebra/inequality.ipynb
+++ b/algebra/inequality.ipynb
@@ -21,9 +21,26 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
     "\n",
-    "from plotting_utils import plot_lines, get_slope_intercept_points"
+    "# Get the current working directory of the notebook\n",
+    "notebook_dir = os.getcwd()\n",
+    "# Assuming utils/ is a sibling folder of the notebook's directory\n",
+    "utils_path = os.path.join(notebook_dir, '..', 'utils')\n",
+    "# Add utils/ to sys.path\n",
+    "sys.path.append(utils_path)\n",
+    "\n",
+    "from plotting import plot_lines, get_slope_intercept_points"
    ]
   },
   {
@@ -561,13 +578,6 @@
     "\n",
     "plot_lines(title, lines, fills)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
