mod: updated plotting utils import for hot reload

--- a/geometry/lines.ipynb
+++ b/geometry/lines.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,19 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
+    "import importlib\n",
     "\n",
     "# Get the current working directory of the notebook\n",
     "notebook_dir = os.getcwd()\n",
     "# Assuming utils/ is a sibling folder of the notebook's directory\n",
     "utils_path = os.path.join(notebook_dir, '..', 'utils')\n",
     "# Add utils/ to sys.path\n",
-    "sys.path.append(utils_path)\n",
+    "if utils_path not in sys.path:\n",
+    "    sys.path.append(utils_path)\n",
+    "\n",
+    "import plotting\n",
+    "\n",
+    "# Reload the plotting module to reflect any changes\n",
+    "importlib.reload(plotting)\n",
     "\n",
     "from plotting import plot_geometry_lines"
    ]
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
