feat: moved find_circle_equation to circles utility

--- a/algebra/circle.ipynb
+++ b/algebra/circle.ipynb
@@ -29,45 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sympy import symbols, Rational, simplify, sqrt\n",
+    "import sys\n",
+    "import os\n",
+    "import importlib\n",
     "\n",
-    "def find_circle_equation(A, B, D, E, F):\n",
-    "    # Define the variables x and y\n",
-    "    x, y = symbols('x y')\n",
-    "    \n",
-    "    # Normalize the coefficients using Rational to avoid floating-point errors\n",
-    "    if A != 1 or B != 1:\n",
-    "        D = Rational(D, A)\n",
-    "        E = Rational(E, B)\n",
-    "        F = Rational(F, A)  # Assume A == B for a circle, otherwise adjust differently\n",
-    "    \n",
-    "    # Completing the square for x\n",
-    "    h = Rational(-D, 2)\n",
-    "    x_term = f\"(x + {-h})\" if h < 0 else f\"(x - {h})\"\n",
-    "    \n",
-    "    # Completing the square for y\n",
-    "    k = Rational(-E, 2)\n",
-    "    y_term = f\"(y + {-k})\" if k < 0 else f\"(y - {k})\"\n",
-    "    \n",
-    "    # Radius squared\n",
-    "    r_squared = simplify(h**2 + k**2 - F)\n",
-    "    radius = sqrt(r_squared)\n",
-    "    \n",
-    "    # Form the equation in a more intuitive format\n",
-    "    circle_equation = f\"{x_term}^2 + {y_term}^2 = {r_squared}\"\n",
-    "    \n",
-    "    # Return the equation, center, and radius\n",
-    "    center = (h, k)\n",
-    "    return circle_equation, center, radius\n"
+    "# Get the current working directory of the notebook\n",
+    "notebook_dir = os.getcwd()\n",
+    "# Assuming utils/ is a sibling folder of the notebook's directory\n",
+    "utils_path = os.path.join(notebook_dir, '..', 'utils')\n",
+    "# Add utils/ to sys.path\n",
+    "if utils_path not in sys.path:\n",
+    "    sys.path.append(utils_path)\n",
+    "\n",
+    "import circles\n",
+    "\n",
+    "# Reload the plotting module to reflect any changes\n",
+    "importlib.reload(circles)\n",
+    "\n",
+    "from circles import find_circle_equation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,14 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import importlib\n",
+    "\n",
+    "# Get the current working directory of the notebook\n",
+    "notebook_dir = os.getcwd()\n",
+    "# Assuming utils/ is a sibling folder of the notebook's directory\n",
+    "utils_path = os.path.join(notebook_dir, '..', 'utils')\n",
+    "# Add utils/ to sys.path\n",
+    "if utils_path not in sys.path:\n",
+    "    sys.path.append(utils_path)\n",
+    "\n",
+    "import plotting\n",
+    "\n",
+    "# Reload the plotting module to reflect any changes\n",
+    "importlib.reload(plotting)\n",
+    "\n",
+    "from plotting import setup_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from plotting_utils import setup_plot\n",
     "from numpy import ndarray\n",
     "from typing import TypedDict, Optional\n",
     "\n",
@@ -250,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
