function partial_fractions_decomposition

--- a/pre-calculus/pre-calculus.ipynb
+++ b/pre-calculus/pre-calculus.ipynb
@@ -46,7 +46,7 @@
     "importlib.reload(preCalculus)\n",
     "importlib.reload(plotting)\n",
     "\n",
-    "from preCalculus import rectangular_to_polar, polar_to_rectangular, get_coterminal_polar_point, find_equivalent_polar_points\n",
+    "from preCalculus import rectangular_to_polar, polar_to_rectangular, get_coterminal_polar_point, find_equivalent_polar_points, partial_fractions_decomposition\n",
     "\n",
     "from plotting import plot_lines, plot_polar_equation, get_segment_lines_by_peaks, PointDict, plot_geometry"
    ]
@@ -1362,7 +1362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2332727319.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2332727319.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
       "  equation = lambda theta: np.sqrt(-4 * np.cos(2 * theta))\n"
      ]
     },
@@ -1405,7 +1405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2850109009.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2850109009.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
       "  equation = lambda theta: np.sqrt(7 * np.sin(2 * theta))\n"
      ]
     },
@@ -1436,20 +1436,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2898977511.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  equation = lambda theta: np.sqrt(4 * np.cos(2 * theta))\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Found 2 vertices:\n",
       "Vertex 1: θ = 0, r = 2.0\n",
       "Vertex 2: θ = π, r = 2.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2898977511.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  equation = lambda theta: np.sqrt(4 * np.cos(2 * theta))\n"
      ]
     },
     {
@@ -1491,7 +1491,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2489160440.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2489160440.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
       "  equation = lambda theta: np.sqrt(-16 * np.sin(2 * theta))\n"
      ]
     },
@@ -1534,7 +1534,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2767171585.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2767171585.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
       "  equation = lambda theta: np.sqrt(25 * np.cos(2 * theta))\n"
      ]
     },
@@ -1565,20 +1565,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2850449946.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  equation = lambda theta: np.sqrt(5 * np.sin(2 * theta))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Found 2 vertices:\n",
       "Vertex 1: θ = π/4, r = 2.24\n",
       "Vertex 2: θ = 5π/4, r = 2.24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2850449946.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  equation = lambda theta: np.sqrt(5 * np.sin(2 * theta))\n"
      ]
     },
     {
@@ -1608,20 +1608,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_20092\\2276386639.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  equation = lambda theta: np.sqrt(6 * np.sin(2 * theta))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Found 2 vertices:\n",
       "Vertex 1: θ = π/4, r = 2.45\n",
       "Vertex 2: θ = 5π/4, r = 2.45\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\seanj\\AppData\\Local\\Temp\\ipykernel_31424\\2276386639.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  equation = lambda theta: np.sqrt(6 * np.sin(2 * theta))\n"
      ]
     },
     {
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "id": "e358bf8b",
    "metadata": {},
    "outputs": [
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 60,
    "id": "7045d7bb",
    "metadata": {},
    "outputs": [
@@ -2432,6 +2432,113 @@
     "}\n",
     "\n",
     "plot_geometry(title, polygons=[original_hexagon, transformed_hexagon], limits=limits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b9ec2701",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x/(x**2 + x + 1) - (x - 1)/(x**2 + 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = \"x+1\"\n",
+    "denominator = \"(x**2+1)*(x**2+x+1)\"\n",
+    "result = partial_fractions_decomposition(numerator, denominator)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "132ad408",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x - 2)/(x**2 + 2) + 2/(x - 3) - 3/(x - 3)**2 + 1/x\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = \"4*x**4 - 23*x**3 + 36*x**2 - 48*x + 18\"\n",
+    "denominator = \"x * (x-3)**2 * (x**2+2)\"\n",
+    "result = partial_fractions_decomposition(numerator, denominator)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "94d5794a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8/(2*x + 1) + 7/(2*(x + 1)) + (x + 1)**(-2) + 1/(2*(x - 1))\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = \"4*x+8\"\n",
+    "denominator = \"(x**2-1) * (2*x+2) * (2*x+1)\"\n",
+    "result = partial_fractions_decomposition(numerator, denominator)\n",
+    "print(result)\n",
+    "\n",
+    "# Note: (x+1)**(-2) = 1 / (x+1)^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9c098ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1/(x**2 + 1) + 2/(x + 3) - 1/(x - 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = \"x**3 - 8*x**2 - 1\"\n",
+    "denominator = \"(x+3) * (x-2) * (x**2+1)\"\n",
+    "result = partial_fractions_decomposition(numerator, denominator)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9bb907ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-x/(2*(x**2 + 4)) + 1/(2*x) + x**(-2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator = \"x**2 + 2*x + 4\"\n",
+    "denominator = \"(x**2) * (x**2+4)\"\n",
+    "result = partial_fractions_decomposition(numerator, denominator)\n",
+    "print(result)"
    ]
   }
  ],
